Fixed YAML v0.68
